--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
+    "bcryptjs": "^2.4.3",
     "leaflet": "^1.6.0",
     "rxjs": "~6.5.1",
     "tslib": "^1.10.0",
